# xdg

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  flake.nix  guix.scm  xdg.cpp  xdg.h  xdg_info.cpp  xdg_test.cpp  xdgcpp-config.cmake.in
include/: xdg.h
pkgconfig/: xdgcpp.pc.in
